fix social-desktop staying on mobile

--- a/css/social.css
+++ b/css/social.css
@@ -4,7 +4,7 @@
 
 @media screen and (max-width: 600px) {
   #social-desktop {
-    display: none;
+    display: none !important;
   }
 
   #social-mobile {
